--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/yade-dev/docker-yade
+image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
 
 stages:
   - cmake
@@ -52,7 +52,7 @@ cmake_MR:
 #                       what .deb package to build could be performed using an env variable.
 
 
-# 2. build stage
+# 2.1 build stage: ubuntu 16.04
 make:
   stage: build
   only:
@@ -67,15 +67,15 @@ make:
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" $LINK_GOLD
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
     - ld --version
-    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in 
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "43" ;; 
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "43" ;; 
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "45" ;; 
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "45" ;; 
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "45" ;; 
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "45" ;; 
-        "yade-runner") echo "12" ;; 
-        "yade-runner-01") echo "1" ;; 
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "64" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "64" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "65" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "65" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "65" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "65" ;;
+        "yade-runner") echo "12" ;;
+        "yade-runner-01") echo "1" ;;
         *) echo "8";;
         esac)
     - echo $JOBSNUM
