ccache is so fast that gitlab-runners build on four linux distros: ubuntu 16.04, 18.04, debian 9 stretch, debian 10 buster.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,11 @@
-image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+# The previously used image:
+# image: registry.gitlab.com/yade-dev/docker-yade
+#
+# Four new images:
+# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
 
 stages:
   - cmake
@@ -10,7 +17,44 @@ stages:
 # https://docs.gitlab.com/ee/ci/yaml/#onlyexcept-basic
 # I create two "stage: cmake" instructions.
 # 1.1. only: master        will use -DCHUNKSIZE=1, to avoid future compilation errors caused by DCHUNKSIZE other than 1
-cmake_master:
+cmake_master_16_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+  stage: cmake
+  only:
+    - master
+  script:
+    - mkdir build && cd build
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+  artifacts:
+    paths:
+      - build
+
+cmake_master_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  stage: cmake
+  only:
+    - master
+  script:
+    - mkdir build && cd build
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+  artifacts:
+    paths:
+      - build
+
+cmake_master_stretch:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  stage: cmake
+  only:
+    - master
+  script:
+    - mkdir build && cd build
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+  artifacts:
+    paths:
+      - build
+
+cmake_master_buster:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   stage: cmake
   only:
     - master
@@ -30,7 +74,53 @@ cmake_master:
 #               volumes = ["/cache","/home/docker/ccache:/root/.ccache:rw"]
 #            where /home/docker/ccache is the directory in the host with write access.
 # See also : https://gitlab.com/gitlab-org/gitlab-runner/blob/master/docs/configuration/advanced-configuration.md#example-2-mount-a-host-directory-as-a-data-volume
-cmake_MR:
+cmake_MR_16_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+  stage: cmake
+  only:
+    - merge_request
+  script:
+    - mkdir build && cd build
+    - export CC="ccache gcc"
+    - export CXX="ccache g++"
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+    - ccache -s
+  artifacts:
+    paths:
+      - build
+
+cmake_MR_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  stage: cmake
+  only:
+    - merge_request
+  script:
+    - mkdir build && cd build
+    - export CC="ccache gcc"
+    - export CXX="ccache g++"
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+    - ccache -s
+  artifacts:
+    paths:
+      - build
+
+cmake_MR_stretch:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  stage: cmake
+  only:
+    - merge_request
+  script:
+    - mkdir build && cd build
+    - export CC="ccache gcc"
+    - export CXX="ccache g++"
+    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
+    - ccache -s
+  artifacts:
+    paths:
+      - build
+
+cmake_MR_buster:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   stage: cmake
   only:
     - merge_request
@@ -50,17 +140,18 @@ cmake_MR:
 # 1.5. only: schedules  For scheluded pipelines. Perhaps it will be e.g. for https://gitlab.com/yade-dev/trunk/issues/58
 #                       It is possible to send an environment variable to the pipeline from the schedule. So here maybe a selection of
 #                       what .deb package to build could be performed using an env variable.
+# in merge_request use the faster  linker: ld.gold. We save 2 minutes on every build.
+# in master        use the regular linker: ld.bfd.  Very rarely we might encounter linker errors. It's worth the faster build in merge_request.
 
 
 # 2.1 build stage: ubuntu 16.04
-make:
+make_16_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   stage: build
   only:
     - master
     - merge_request
   script:
-# in merge_request use the faster  linker: ld.gold. We save 2 minutes on every build.
-# in master        use the regular linker: ld.bfd.  Very rarely we might encounter linker errors. It's worth the faster build in merge_request.
     - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
     - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
     - ld --version
@@ -68,12 +159,12 @@ make:
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
     - ld --version
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "64" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "64" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "65" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "65" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "65" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "65" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -91,12 +182,133 @@ make:
   tags:
     - fast
   dependencies:
-    - cmake_master
-    - cmake_MR
+    - cmake_master_16_04
+    - cmake_MR_16_04
+
+make_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  stage: build
+  only:
+    - master
+    - merge_request
+  script:
+    - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
+    - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
+    - ld --version
+    - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" $LINK_GOLD
+    - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
+    - ld --version
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "yade-runner") echo "12" ;;
+        "yade-runner-01") echo "1" ;;
+        *) echo "8";;
+        esac)
+    - echo $JOBSNUM
+    - cd build
+    - echo "max_size = 100.0G" > ~/.ccache/ccache.conf
+    - make -j $JOBSNUM
+    - make install
+    - make clean
+    - ccache -s
+  artifacts:
+    paths:
+      - install
+  tags:
+    - fast
+  dependencies:
+    - cmake_master_18_04
+    - cmake_MR_18_04
+
+make_stretch:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  stage: build
+  only:
+    - master
+    - merge_request
+  script:
+    - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
+    - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
+    - ld --version
+    - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" $LINK_GOLD
+    - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
+    - ld --version
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "yade-runner") echo "12" ;;
+        "yade-runner-01") echo "1" ;;
+        *) echo "8";;
+        esac)
+    - echo $JOBSNUM
+    - cd build
+    - echo "max_size = 100.0G" > ~/.ccache/ccache.conf
+    - make -j $JOBSNUM
+    - make install
+    - make clean
+    - ccache -s
+  artifacts:
+    paths:
+      - install
+  tags:
+    - fast
+  dependencies:
+    - cmake_master_stretch
+    - cmake_MR_stretch
+
+make_buster:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
+  stage: build
+  only:
+    - master
+    - merge_request
+  script:
+    - export LINK_GOLD=$(case    $CI_PIPELINE_SOURCE in "merge_request_event") echo "20" ;; *) echo "10";; esac)
+    - export LINK_REGULAR=$(case $CI_PIPELINE_SOURCE in "merge_request_event") echo "10" ;; *) echo "20";; esac)
+    - ld --version
+    - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.gold" $LINK_GOLD
+    - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
+    - ld --version
+    - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "yade-runner") echo "12" ;;
+        "yade-runner-01") echo "1" ;;
+        *) echo "8";;
+        esac)
+    - echo $JOBSNUM
+    - cd build
+    - echo "max_size = 100.0G" > ~/.ccache/ccache.conf
+    - make -j $JOBSNUM
+    - make install
+    - make clean
+    - ccache -s
+  artifacts:
+    paths:
+      - install
+  tags:
+    - fast
+  dependencies:
+    - cmake_master_buster
+    - cmake_MR_buster
 
 
 # 3.1. test stage
-test:
+test_16_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   stage: test
   only:
     - master
@@ -104,11 +316,50 @@ test:
   script:
     - install/bin/yade-ci --test
   dependencies:
-    - make
+    - make_16_04
+
+test_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  stage: test
+  only:
+    - master
+    - merge_request
+  script:
+    - install/bin/yade-ci --test
+  dependencies:
+    - make_18_04
+
+test_stretch:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  stage: test
+  only:
+    - master
+    - merge_request
+  script:
+    - install/bin/yade-ci --test
+  dependencies:
+    - make_stretch
+
+test_buster:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
+  stage: test
+  only:
+    - master
+    - merge_request
+  script:
+    - install/bin/yade-ci --test
+  dependencies:
+    - make_buster
 
 
+# Four new images:
+# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
+# image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+# image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
 # 3.2. check stage
-check:
+check_16_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   stage: test
   only:
     - master
@@ -116,11 +367,45 @@ check:
   script:
     - install/bin/yade-ci --checks
   dependencies:
-    - make
+    - make_16_04
+
+check_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
+  stage: test
+  only:
+    - master
+    - merge_request
+  script:
+    - install/bin/yade-ci --checks
+  dependencies:
+    - make_18_04
+
+check_stretch:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
+  stage: test
+  only:
+    - master
+    - merge_request
+  script:
+    - install/bin/yade-ci --checks
+  dependencies:
+    - make_stretch
+
+check_buster:
+  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
+  stage: test
+  only:
+    - master
+    - merge_request
+  script:
+    - install/bin/yade-ci --checks
+  dependencies:
+    - make_buster
 
 
 # 4. doc stage
-doc:
+doc_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   stage: doc
   only:
     - master
@@ -129,16 +414,17 @@ doc:
     - cd build
     - xvfb-run -s "-screen 0 1600x1200x24" make doc
   dependencies:
-    - cmake_master
-    - cmake_MR
-    - make
+    - cmake_master_18_04
+    - cmake_MR_18_04
+    - make_18_04
   artifacts:
     paths:
       - install
 
 
 # 5. pages stage; uploads documentation to the website
-pages:
+pages_18_04:
+  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   stage: pages
   only:
     - master
@@ -147,7 +433,7 @@ pages:
     - mv install/share/doc/yade-ci/Yade.pdf public
     - mv install/share/doc/yade-ci/Yade.epub public
   dependencies:
-    - doc
+    - doc_18_04
   artifacts:
     paths:
       - public
