--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -327,6 +327,7 @@ test_16_04:
     - merge_request
   script:
     - install/bin/yade-ci --test
+    - cat /etc/issue
   dependencies:
     - make_16_04
 
@@ -338,6 +339,7 @@ test_18_04:
     - merge_request
   script:
     - install/bin/yade-ci --test
+    - cat /etc/issue
   dependencies:
     - make_18_04
 
@@ -349,6 +351,7 @@ test_stretch:
     - merge_request
   script:
     - install/bin/yade-ci --test
+    - cat /etc/issue
   dependencies:
     - make_stretch
 
@@ -360,6 +363,7 @@ test_buster:
     - merge_request
   script:
     - install/bin/yade-ci --test
+    - cat /etc/issue
   dependencies:
     - make_buster
 
