--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,63 +14,7 @@ stages:
   - doc
   - pages
 
-# https://docs.gitlab.com/ee/ci/yaml/#onlyexcept-basic
-# I create two "stage: cmake" instructions.
-# 1.1. only: master        will use -DCHUNKSIZE=1, to avoid future compilation errors caused by DCHUNKSIZE other than 1
-cmake_master_16_04:
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
-  stage: cmake
-  only:
-    - master
-  script:
-    - mkdir build && cd build
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
-  artifacts:
-    paths:
-      - build
-    expire_in: 2 weeks
-
-cmake_master_18_04:
-  image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
-  stage: cmake
-  only:
-    - master
-  script:
-    - mkdir build && cd build
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
-  artifacts:
-    paths:
-      - build
-    expire_in: 2 weeks
-
-cmake_master_stretch:
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
-  stage: cmake
-  only:
-    - master
-  script:
-    - mkdir build && cd build
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
-  artifacts:
-    paths:
-      - build
-    expire_in: 2 weeks
-
-cmake_master_buster:
-  image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
-  stage: cmake
-  only:
-    - master
-  script:
-    - mkdir build && cd build
-    - cmake -DSUFFIX=-ci -DCMAKE_VERBOSE_MAKEFILE=ON -DCHUNKSIZE=1 -DCMAKE_INSTALL_PREFIX=../install -DPYTHON_VERSION=3 -DDISABLE_SAVE_TEMPS=1 ..
-  artifacts:
-    paths:
-      - build
-    expire_in: 2 weeks
-
-
-# 1.2. only: merge_request uses ccache for faster compilation. ccache works only with -DCHUNKSIZE=1
+# stage: cmake uses ccache for faster compilation. ccache works only with -DCHUNKSIZE=1
 # Important: to get ccache to work an external volume must be mounted by gitlab-runner (in config file: /etc/gitlab-runner/config.toml)
 #            into docker directory /root/.ccache. By default in /etc/gitlab-runner/config.toml there is already this line:
 #               volumes = ["/cache"]
@@ -78,10 +22,11 @@ cmake_master_buster:
 #               volumes = ["/cache","/home/docker/ccache:/root/.ccache:rw"]
 #            where /home/docker/ccache is the directory in the host with write access.
 # See also : https://gitlab.com/gitlab-org/gitlab-runner/blob/master/docs/configuration/advanced-configuration.md#example-2-mount-a-host-directory-as-a-data-volume
-cmake_MR_16_04:
+cmake_16_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu16.04-py3
   stage: cmake
   only:
+    - master
     - merge_request
   script:
     - mkdir build && cd build
@@ -94,10 +39,11 @@ cmake_MR_16_04:
       - build
     expire_in: 2 weeks
 
-cmake_MR_18_04:
+cmake_18_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   stage: cmake
   only:
+    - master
     - merge_request
   script:
     - mkdir build && cd build
@@ -110,10 +56,11 @@ cmake_MR_18_04:
       - build
     expire_in: 2 weeks
 
-cmake_MR_stretch:
+cmake_stretch:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
   stage: cmake
   only:
+    - master
     - merge_request
   script:
     - mkdir build && cd build
@@ -126,10 +73,11 @@ cmake_MR_stretch:
       - build
     expire_in: 2 weeks
 
-cmake_MR_buster:
+cmake_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
   stage: cmake
   only:
+    - master
     - merge_request
   script:
     - mkdir build && cd build
@@ -167,12 +115,12 @@ make_16_04:
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
     - ld --version
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -191,8 +139,7 @@ make_16_04:
   tags:
     - fast
   dependencies:
-    - cmake_master_16_04
-    - cmake_MR_16_04
+    - cmake_16_04
 
 make_18_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
@@ -208,12 +155,12 @@ make_18_04:
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
     - ld --version
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -232,8 +179,7 @@ make_18_04:
   tags:
     - fast
   dependencies:
-    - cmake_master_18_04
-    - cmake_MR_18_04
+    - cmake_18_04
 
 make_stretch:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-stretch
@@ -249,12 +195,12 @@ make_stretch:
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
     - ld --version
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -273,8 +219,7 @@ make_stretch:
   tags:
     - fast
   dependencies:
-    - cmake_master_stretch
-    - cmake_MR_stretch
+    - cmake_stretch
 
 make_buster:
   image: registry.gitlab.com/yade-dev/docker-yade:debian-buster
@@ -290,12 +235,12 @@ make_buster:
     - update-alternatives --install "/usr/bin/ld" "ld" "/usr/bin/ld.bfd" $LINK_REGULAR
     - ld --version
     - export JOBSNUM=$(case $CI_RUNNER_DESCRIPTION in
-        "y_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "c_4pak_64cpu_256RAM_4TB_docker") echo "14" ;;
-        "y_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "c_6pak_48cpu_128RAM_4TB_docker") echo "15" ;;
-        "y_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
-        "c_7pak_48cpu_128RAM_1TB_docker") echo "15" ;;
+        "y_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "c_4pak_64cpu_256RAM_4TB_docker") echo "22" ;;
+        "y_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "c_6pak_48cpu_128RAM_4TB_docker") echo "25" ;;
+        "y_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
+        "c_7pak_48cpu_128RAM_1TB_docker") echo "25" ;;
         "yade-runner") echo "12" ;;
         "yade-runner-01") echo "1" ;;
         *) echo "8";;
@@ -314,8 +259,7 @@ make_buster:
   tags:
     - fast
   dependencies:
-    - cmake_master_buster
-    - cmake_MR_buster
+    - cmake_buster
 
 
 # 3.1. test stage
@@ -430,8 +374,7 @@ doc_18_04:
     - cd build
     - xvfb-run -s "-screen 0 1600x1200x24" make doc
   dependencies:
-    - cmake_master_18_04
-    - cmake_MR_18_04
+    - cmake_18_04
     - make_18_04
   artifacts:
     paths:
