--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ stages:
   - cmake
   - build
   - test
-  - doc
   - pages
 
 # stage: cmake uses ccache for faster compilation. ccache works only with -DCHUNKSIZE=1
@@ -366,7 +365,7 @@ check_buster:
 # 4. doc stage
 doc_18_04:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
-  stage: doc
+  stage: test
   only:
     - master
     - merge_request
