Not sure what happened to deploy stage in master. Maybe renaming 'pages' stage will bring it back.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -381,7 +381,7 @@ doc_18_04:
 
 
 # 5. pages stage; uploads documentation to the website
-pages_18_04:
+pages:
   image: registry.gitlab.com/yade-dev/docker-yade:ubuntu18.04
   stage: pages
   only:
