Enable boost::log - currently only super-trivial implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@
 #  LIBRARY_OUTPUT_PATH: path to install libraries (lib by default)
 #  DEBUG: compile in debug-mode (OFF by default)
 #  TRACEONLY: of all debug macros enable only the TRACE macro in lib/base/Logging.hpp, even if DEBUG=OFF (OFF by default)
+#  BOOSTLOG: use boost::log library for logging (OFF by default)  [name BOOST_LOG is a macro in boost. I don't want any problems due to overwriting that name.]
 #  CMAKE_VERBOSE_MAKEFILE: output additional information during compiling (OFF by default)
 #  SUFFIX: suffix, added after binary-names (version number by default)
 #  NOSUFFIX: do not add a suffix after binary-name (OFF by default)
@@ -151,6 +152,16 @@ IF (TRACEONLY)
     MESSAGE(STATUS "Enabling lib/base/Logging.hpp TRACE macro without any extra debug info.")
   ENDIF (DEBUG)
 ENDIF (TRACEONLY)
+
+IF(BOOSTLOG)
+  ADD_DEFINITIONS("-D YADE_BOOST_LOG")
+  ADD_DEFINITIONS("-D BOOST_LOG_DYN_LINK")
+  IF (DEBUG)
+    MESSAGE(STATUS "Enabling boost::log library and DEBUG=ON.")
+  ELSE (DEBUG)
+    MESSAGE(STATUS "Enabling boost::log library and DEBUG=OFF. What will come out of this?")
+  ENDIF (DEBUG)
+ENDIF(BOOSTLOG)
 
 #==================================
 #====== *** PYTHON/BOOST *** ======
